--- a/style.css
+++ b/style.css
@@ -5,12 +5,19 @@
 }
 
 .section {
-  padding: 90px 0;
+  padding: 60px 0;
+  width: 930px;
+  margin: 0 auto;
 }
 
 .section__title {
   font-size: 32px;
-  text-align: center;
+  margin-bottom: 48px;
+}
+
+.section__heading {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 48px;
 }
 
@@ -20,8 +27,13 @@
   line-height: 32px;
   padding: 0 16px;
   font-size: 16px;
-  margin: 0 auto;
-  margin-bottom: 64px;
+}
+
+.select {
+  display: block;
+  line-height: 32px;
+  padding: 0 16px;
+  font-size: 16px;
 }
 
 .alert {
@@ -33,34 +45,29 @@
   border-radius: 6px;
   background-color: rgba(235, 87, 87, 0.2);
   color: #eb5757;
-  max-width: 550px;
-  margin: 0 auto;
 }
 
 .alert.alert_visible {
   display: block;
 }
 
-.grid {
-  width: 930px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 32px;
+.table {
+  border-collapse: collapse;
+  width: 100%;
 }
 
-.card {
-  padding: 16px;
-  border-radius: 6px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+.table__heading,
+.table__data {
+  border: 1px solid #8e8e8e;
+  padding: 12px;
 }
 
-.card__title {
-  font-size: 22px;
-  text-align: center;
-  margin-bottom: 32px;
+.table__heading {
+  background-color: #4281e6;
+  color: #ffffff;
+  text-align: left;
 }
 
-.card__length {
-  text-align: center;
+.table__row:nth-child(2n) {
+  background-color: #efefef;
 }
